--- a/src/components/shared/Header/Header.css
+++ b/src/components/shared/Header/Header.css
@@ -2,3 +2,10 @@
     height: 45px;
     width: 150px;
 }
+
+@media screen and (max-width: 768px) {
+    .logo-img{
+        height: 25px;
+        width: 80px;
+    }
+  }
